# codeGate

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  V0.5_PLAN.md  pyproject.toml
.agents/: rules.md
ADR/: 001-langgraph-state-machine.md  002-policy-violations-not-warnings.md  003-state-mutation-only-in-nodes.md  004-executor-adapter-pattern.md  005-prompt-policy-alignment.md  006-findings-only-defects.md  007-gate-semantics-tightening.md  008-risk-level-enforcement.md  009-structural-precheck.md
docs/: TEAM_ALPHA_TRIAL_GUIDE.md  USAGE_GUIDE_ZH.md  backend-security-gate-design.md  governed-execution-boundary.md  security-evidence-schema.md
eval_cases/: image2pdf_cases.yaml
funding/: benchmark_summary.md  budget.md  one_pager.md  openai_codex_oss_application.md  openai_codex_oss_form_answers.md  openai_cybersecurity_grant_application.md
scripts/: regenerate_batch_report.py
spec/: benchmark-v1-conclusions.md  benchmark-v2-conclusions.md  benchmark-v2.2-report.md  benchmark-v2.3-report.md  benchmark-v2.3.1-report.md  benchmark-v2.3.2-report.md  benchmark-v3-security-gate-report.md  benchmark-v4-backend-security-gate-report.md  benchmark-v5-evidence-quality-report.md  benchmark-v6-real-executor-smoke-report.md  codegate-usage-guide.md  real-project-image2pdf-test-report.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.5.0.md  release-notes-v0.6.0.md  release-notes-v3-security-benchmark.md  report-review-checklist.md  system.md  v2.1-retro-v2.2-plan.md  v2.4-opencode-integration-report.md
tests/: run_ab_all.py  test_ab_case1.py  test_ab_case2.py  (+23 more)
(+78 files in other folders)
