[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegate"
version = "0.4.0"
description = "An approval and quality gate layer for AI coding workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "CodeGate Team" },
]
keywords = ["ai", "coding", "governance", "quality-gate", "contract"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "litellm>=1.60.0",
    "pydantic>=2.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
eval = [
    "tabulate>=0.9.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
codegate = "codegate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/codegate"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
